FIX: left align drop-down description text on User page

--- a/assets/stylesheets/common/follow.scss
+++ b/assets/stylesheets/common/follow.scss
@@ -51,9 +51,13 @@
 }
 
 .select-kit.dropdown-select-box.user-notifications-dropdown {
-  width:100%;
-  .select-kit-header-wrapper {
-    align-items: center;
-    justify-content: center;
-  }
+    width:100%;
+    .select-kit-header-wrapper {
+      align-items: center;
+      justify-content: center;
+    }
+}
+
+.select-kit.dropdown-select-box .select-kit-row .texts .desc {
+  text-align: left;
 }
